--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -9,12 +9,12 @@ bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-Build=IfProjectHasCode
+Build=Always
 BuildConfiguration=PPBC_Shipping
 BuildTarget=
 LaunchOnTarget=
 StagingDirectory=(Path="D:/Repositories/UE5/UnrealTowerDefense/Build")
-FullRebuild=False
+FullRebuild=True
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
